# MultiRobot

./: .gitmodules  README.md
aruco_ros2/aruco/: CMakeLists.txt  package.xml
aruco_ros2/aruco/include/aruco/: cameraparameters.h  markerdetector.h
aruco_ros2/aruco/src/aruco/: aruco_selectoptimalmarkers.cpp  arucofidmarkers.cpp  board.cpp  boarddetector.cpp  cameraparameters.cpp  cvdrawingutils.cpp  marker.cpp  markerdetector.cpp
aruco_ros2/aruco_description/: CMakeLists.txt
aruco_ros2/aruco_description/launch/: load_aruco_description.launch  load_aruco_description.launch.py  load_models_aruco.launch.py  spawn_aruco.launch
aruco_ros2/aruco_description/model/: template.dae
aruco_ros2/aruco_description/scripts/: generate_aruco_mesh.py  generate_markers_model.py
aruco_ros2/aruco_ros2/: CMakeLists.txt  package.xml
aruco_ros2/aruco_ros2/docs/html/: CMakeLists_8txt.html  annotated.html  aruco__ros__utils_8cpp.html  aruco__ros__utils_8cpp__incl.map  aruco__ros__utils_8cpp__incl.md5  aruco__ros__utils_8cpp_source.html  aruco__ros__utils_8hpp.html  aruco__ros__utils_8hpp__dep__incl.map  aruco__ros__utils_8hpp__dep__incl.md5  aruco__ros__utils_8hpp__incl.map  aruco__ros__utils_8hpp__incl.md5  aruco__ros__utils_8hpp_source.html  classArucoMarkerPublisher-members.html  classArucoMarkerPublisher.html  classArucoMarkerPublisher__coll__graph.md5  classArucoMarkerPublisher_a3db236b0425d8a9f6b7ad5f77b60b1e2_cgraph.map  classArucoMarkerPublisher_a3db236b0425d8a9f6b7ad5f77b60b1e2_cgraph.md5  classArucoMarkerPublisher_afe76898abd73bb5be75452a3bbcf88ff_cgraph.map  classArucoMarkerPublisher_afe76898abd73bb5be75452a3bbcf88ff_cgraph.md5  classArucoSimple-members.html  classArucoSimple.html  classArucoSimple__coll__graph.map  classArucoSimple__coll__graph.md5  classArucoSimple_a80237a79825e1fbd14868392f1ff9f9e_cgraph.map  classArucoSimple_ac17ee5a29c013d7eb52a94ee762cc5da_cgraph.map  classArucoSimple_ac17ee5a29c013d7eb52a94ee762cc5da_cgraph.md5  classArucoSimple_ac690575f6aa0b51b66a3956b44d62b1a_cgraph.map  classArucoSimple_ac690575f6aa0b51b66a3956b44d62b1a_cgraph.md5  classes.html  dir_000002_000000.html  dir_000003_000000.html  dir_000004_000000.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  dir_dfc7d8cdbd46a1a497d93f64728c40b9.html  dir_ed1257bb0a434f54075cc5c1cfe1a20f.html  dir_ed1257bb0a434f54075cc5c1cfe1a20f_dep.map  (+75 more)
aruco_ros2/aruco_ros2/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  (+28 more)
aruco_ros2/aruco_ros2/docs/latex/: CMakeLists_8txt.tex  annotated.tex  aruco__ros__utils_8cpp.tex  aruco__ros__utils_8cpp__incl.md5  aruco__ros__utils_8hpp.tex  aruco__ros__utils_8hpp__dep__incl.md5  aruco__ros__utils_8hpp__incl.md5  classArucoMarkerPublisher.tex  classArucoMarkerPublisher__inherit__graph.md5  classArucoMarkerPublisher_a3db236b0425d8a9f6b7ad5f77b60b1e2_cgraph.md5  classArucoMarkerPublisher_a667727d4e7ca9f248e64e2c20d5c25ea_cgraph.md5  classArucoMarkerPublisher_afe76898abd73bb5be75452a3bbcf88ff_cgraph.md5  classArucoSimple.tex  classArucoSimple_a80237a79825e1fbd14868392f1ff9f9e_cgraph.md5  classArucoSimple_ac17ee5a29c013d7eb52a94ee762cc5da_cgraph.md5  classArucoSimple_ac690575f6aa0b51b66a3956b44d62b1a_cgraph.md5  dir_13e138d54eb8818da29c3992edef070a.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_dfc7d8cdbd46a1a497d93f64728c40b9.tex  dir_ed1257bb0a434f54075cc5c1cfe1a20f.tex  files.tex  hierarchy.tex  index.tex  marker__publish_8cpp.tex  marker__publish_8cpp__incl.md5  marker__publish_8hpp.tex  marker__publish_8hpp__dep__incl.md5  marker__publish_8hpp__incl.md5  marker__publish__node_8cpp.tex  marker__publish__node_8cpp__incl.md5  namespacearuco__ros.tex  namespaces.tex  refman.tex  simple__single_8cpp.tex  simple__single_8cpp__incl.md5  simple__single_8hpp.tex  simple__single_8hpp__dep__incl.md5  simple__single_8hpp__incl.md5  simple__single__node_8cpp.tex  (+17 more)
aruco_ros2/aruco_ros2/include/aruco_ros/: aruco_ros_utils.hpp  marker_publish.hpp  simple_single.hpp  test_aruco_function.hpp  test_markerpublisher_aruco_ros2.hpp  test_simplesingle_aruco_ros2.hpp
aruco_ros2/aruco_ros2/launch/: double.launch.xml  marker_publisher.launch.py  marker_publisher.launch.xml  single.launch.xml
aruco_ros2/aruco_ros2/node/: marker_publish_node.cpp  simple_single_node.cpp
aruco_ros2/aruco_ros2/src/: aruco_ros_utils.cpp  marker_publish.cpp  simple_single.cpp
aruco_ros2/aruco_ros2/test/: test_aruco_function.cpp  test_markerpublisher_aruco_ros2.cpp  test_simplesingle_aruco_ros2.cpp
mrs_computer_vision/aruco_ros2/aruco_description/: CMakeLists.txt  package.xml
mrs_computer_vision/aruco_ros2/aruco_description/launch/: generate_aruco.launch  load_aruco_description.launch.py  load_models_aruco.launch.py
mrs_computer_vision/aruco_ros2/aruco_description/scripts/: generate_aruco_mesh.py  generate_markers_model.py
mrs_computer_vision/aruco_ros2/aruco_ros/: CMakeLists.txt
mrs_computer_vision/aruco_ros2/aruco_ros/launch/: marker_publisher.launch.py
mrs_computer_vision/aruco_ros2/aruco_ros/src/: simple_single.cpp
realsense-ros/realsense2_description/: CMakeLists.txt  package.xml
realsense-ros/realsense2_description/launch/: gazebo.launch.py  gazebo_init.launch.py  l515_spawn.launch.py  l515_spawn.py  view_d435_model.launch.py  view_d435_model_rviz_gazebo.launch.py  view_d435i_model_rviz_gazebo.launch.py  view_l515_model.launch.py  view_l515_model_rviz_gazebo.launch.py  view_multiple_d435_models.launch.py  view_r410_model.launch.py  view_r430_model.launch.py
realsense-ros/realsense2_description/rviz/: urdf.rviz
realsense-ros/realsense2_description/scripts/: l515_spawn.py
realsense-ros/realsense2_description/urdf/: _l515.gazebo.xacro  cam_d435.urdf.xacro  cam_l515.urdf.xacro  gz435_l515.urdf.xacro  test_l515_camera.urdf.xacro
realsense-ros/realsense2_description/worlds/: floating_marker.world
(+785 files in other folders)
