<?xml version="1.0"?>
<package format="3">
  <name>aruco</name>
  <version>0.2.4</version>
  <description>
    The ARUCO Library has been developed by the Ava group of the Univeristy of Cordoba(Spain).
    It provides real-time marker based 3D pose estimation using AR markers.
  </description>
  <maintainer email="bence.magyar.robotics@gmail.com">Bence Magyar</maintainer>
  <license>BSD</license>
  <url type="website">http://www.uco.es/investiga/grupos/ava/node/26</url>
  <author email="rmsalinas@uco.es">Rafael Muñoz Salinas</author>
  <author email="bence.magyar@pal-robotics.com">Bence Magyar</author>

   <buildtool_depend>ament_cmake</buildtool_depend>


  <depend>rclcpp</depend> 
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rmw_implementation</depend>

  <depend>cv_bridge</depend>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
