<?xml version="1.0"?>
<package format="3">
  <name>aruco_ros2</name>
  <version>0.0.1</version>
  <description>aruco wrapper for ROS2</description>
  <maintainer email="raven904.chan@gmail.com">raymond</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>aruco</depend>
  <depend>aruco_msgs</depend>
  <depend>tf2</depend>
  <depend>rclpy</depend>
  <depend>tf2_geometry_msgs</depend>
  

  <build_depend>libopencv-dev</build_depend>

  <exec_depend>libopencv-dev</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
